vlib/v/checker/tests/module_selector_decl_assign_err.vv
import os

fn main() {
	os.args := []string{}
	println(os.args)
}
